<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="facebook_app_id">879853238692079</string>
    <string name="app_name">Kid Paint</string>
    <string name="app_name_caption">KID PAINT</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_preview">Preview</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_paint">Paint</string>
    <string name="menu_option_setting">SETTINGS</string>
    <string name="menu_option_logout">LOGOUT</string>
    <string name="menu_option_theme">THEMES</string>
    <string name="action_new_paint">New paint</string>
    <string name="action_edit_paint">Edit paint</string>
    <string name="action_delete_paint">Delete paint</string>
    <string name="action_rename_paint">Rename paint</string>
    <string name="theme_1">Theme 1</string>
    <string name="theme_2">Theme 2</string>
    <string name="theme_3">Theme 3</string>
    <string name="theme_4">Theme 4</string>
    <string name="theme_5">Theme 5</string>
    <string name="theme_6">Theme 6</string>
    <string name="login">Login</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string name="title_activity_new">New</string>
    <string name="paint_new">NEW PAINT</string>
    <string name="paint_name">Name</string>
    <string name="paint_size">Size</string>
    <string name="paint_width">Width</string>
    <string name="paint_height">Height</string>
    <string name="paint_custom">Custom</string>
    <string name="pixel">Pixel</string>
    <string name="paint_background">Background</string>
    <string name="paint_rename">RENAME PAINT</string>
    <string name="paint_new_name">New name</string>
    <string name="paint_delete">DELETE PAINT</string>
    <string name="paint_delete_message">You want to delete this paint?</string>
    <string name="dialog_message">MESSAGE</string>
    <string name="loading">Loading...</string>
    <string name="saved_message">Congratulation! Your paint is saved!</string>
    <string name="cancel_message_unsaved">Your paint hasn\'t been saved! Do you want to quit?</string>
    <string name="cancel_message_saved">Do you want to quit?</string>

    <string-array name="paint_size_preset">
        <item>800 x 600</item>
        <item>1280 x 768</item>
        <item>1280 x 720</item>
        <item>Custom</item>
    </string-array>

    <string-array name="pencil_opacity">
        <item>100%</item>
        <item>90%</item>
        <item>80%</item>
        <item>70%</item>
        <item>60%</item>
        <item>50%</item>
        <item>40%</item>
        <item>30%</item>
        <item>20%</item>
        <item>10%</item>
    </string-array>

    <string name="action_ok">OK</string>
    <string name="action_share">SHARE</string>
    <string name="action_edit">EDIT</string>
    <string name="action_new">NEW</string>
    <string name="action_back">BACK</string>
    <string name="action_home">HOME</string>
    <string name="action_cancel">CANCEL</string>
    <string name="title_activity_splash">Splash</string>

    <string name="recent_colors">Recent colors</string>
    <string name="default_colors">Default colors</string>
    <string name="pick_color">Pick color</string>
    <string name="color_chooser">Color</string>
    <string name="new_from_image">Thêm ảnh</string>
    <string name="search">Tìm kiếm</string>

</resources>
