<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/theme_4"
    android:id="@+id/dialog_container"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.namnv.project.kidpaint.New">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:text="@string/color_chooser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/theme_text_color"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/menu_item_indicator"
        android:layout_marginBottom="20dp">
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/theme_text_color"
        android:text="@string/recent_colors"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp">

        <LinearLayout
            android:id="@+id/recent_color_list_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/theme_text_color"
        android:layout_marginTop="10dp"
        android:text="@string/default_colors"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp">

        <LinearLayout
            android:id="@+id/default_color_list_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/pick_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_color"
        android:textColor="@color/theme_text_color"
        style="@style/KidPaint.ActionBar.Default.ActionButton"/>

</LinearLayout>
